--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
